--- a/app/src/main/res/layout/viewholder_recent.xml
+++ b/app/src/main/res/layout/viewholder_recent.xml
@@ -11,7 +11,7 @@
         android:id="@+id/imageViewId2"
         android:layout_width="220dp"
         android:layout_height="120dp"
-        app:cardCornerRadius="50dp"
+        app:cardCornerRadius="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,7 +22,8 @@
             android:id="@+id/recentImageViewId"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:srcCompat="@drawable/fuska1" />
+            app:srcCompat="@drawable/fuska1"
+            android:scaleType="centerCrop"/>
     </androidx.cardview.widget.CardView>
 
  <!--   <ImageView
