--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,12 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="PROFILE"
-        android:textSize="30dp"
-        android:gravity="center"
-        />
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
+
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/photoViewId"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="150dp"
+        android:layout_marginLeft="120dp"
+        android:layout_marginTop="5dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/profile_pic"
+        app:shapeAppearanceOverlay="@style/ImageStyle_Circle"
+        app:strokeColor="@color/teal_200"
+        app:strokeWidth="2dp" />
+
+    <TextView
+        android:id="@+id/nameTextViwId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/photoViewId"
+        android:layout_marginStart="130dp"
+        android:layout_marginLeft="80dp"
+        android:layout_marginTop="5dp"
+        android:text="ahadul islam"
+        android:textSize="20dp" />
+
+    <TextView
+        android:id="@+id/numberTextViwId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/nameTextViwId"
+        android:layout_marginStart="140dp"
+        android:layout_marginLeft="120dp"
+        android:layout_marginTop="5dp"
+        android:text="01621066523" />
+
+    <Button
+        android:id="@+id/addPhotoButtonId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/numberTextViwId"
+        android:layout_marginLeft="90dp"
+        android:layout_marginTop="20dp"
+        android:text="Add Photo"
+        android:textSize="10dp" />
+
+    <Button
+        android:id="@+id/uploadButtonId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/numberTextViwId"
+        android:layout_marginLeft="190dp"
+        android:layout_marginTop="20dp"
+        android:text="Upload"
+        android:textSize="10dp" />
+    <!-- <TextView
+         android:layout_width="match_parent"
+         android:layout_height="match_parent"
+         android:text="PROFILE"
+         android:textSize="30dp"
+         android:gravity="center"
+         />
+ -->
 </RelativeLayout>
