--- a/app/src/main/res/layout/viewholder_cat.xml
+++ b/app/src/main/res/layout/viewholder_cat.xml
@@ -11,7 +11,7 @@
         android:id="@+id/imageViewId2"
         android:layout_width="220dp"
         android:layout_height="120dp"
-        app:cardCornerRadius="50dp"
+        app:cardCornerRadius="45dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,7 +22,9 @@
             android:id="@+id/imageViewId"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:srcCompat="@drawable/pizza_1" />
+            app:srcCompat="@drawable/pizza_1"
+            app:strokeWidth="2dp"
+            android:scaleType="centerCrop"/>
     </androidx.cardview.widget.CardView>
 
  <!--   <ImageView
