--- a/app/src/main/res/layout/viewholder_popular.xml
+++ b/app/src/main/res/layout/viewholder_popular.xml
@@ -16,12 +16,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleTextViewId"
         app:layout_constraintVertical_bias=".03"
-        app:cardCornerRadius="30dp">
+        app:cardCornerRadius="30dp"
+        >
         <ImageView
             android:id="@+id/imageViewId"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:srcCompat="@drawable/burger_1" />
+            app:srcCompat="@drawable/burger_1"
+            android:scaleType="centerCrop"/>
     </androidx.cardview.widget.CardView>
 
 
